<resources>
    <string name="app_name">Interactive Material</string>
    <string name="show_hide_fab">Show/Hide Fab</string>
    <string name="alignment_mode">Alignment Mode</string>
    <string name="center">Center</string>
    <string name="end">End</string>
    <string name="cradle_margin">Cradle Margin</string>
    <string name="cradle_rounded_corner_radius">Cradle Rounded Corner Radius</string>
    <string name="cradle_vertical_offset">Cradle Vertical Offset</string>
    <string name="hide_bottom_nav_question">Hide Bottom Navigation On Scroll?</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="search">Search</string>
    <string name="more">More</string>
    <string name="settings">Settings</string>
    <string name="outlined_button">Outlined Button</string>
    <string name="unelevated_button">Unelevated Button</string>
    <string name="text_button">Text Button</string>
    <string name="buttons">Buttons</string>
    <string name="bottom_navigation">Bottom navigation</string>
    <string name="show_hide_button_icon">Show/Hide Button Icon</string>
    <string name="icon_gravity">Icon Gravity</string>
    <string name="start">Start</string>
    <string name="stroke_width">Stroke Width</string>
    <string name="corner_radius">Corner Radius</string>
    <string name="cards">Cards</string>
    <string name="card_elevation">Card elevation</string>
    <string name="card_corner_radius">Card corner radius</string>
    <string name="Chips">Chips</string>
    <string name="entry_chip">Entry Chip</string>
    <string name="filter_chip">Filter Chip</string>
    <string name="choice_chip">Choice Chip</string>
    <string name="action_chip">Action Chip</string>
    <string name="show_hide_chip_icon">Show/Hide Chip icon</string>
    <string name="show_hide_chip_close_icon">Show/Hide Chip close icon</string>
    <string name="entry_chip_description">Use entry chips to represent a complex piece of information in a compact form. This style usually contains an optional chip icon, optional close icon, and is optionally checkable.</string>
    <string name="chip_one">Chip one</string>
    <string name="chip_two">Chip Two</string>
    <string name="chip_filter_description">Use filter chips containing tags or descriptive words to filter a collection. This style usually contains an optional chip icon, an optional close icon, and is always checkable.</string>
    <string name="text_fields">Text Fields</string>
    <string name="filled">Filled</string>
    <string name="outlined">Outlined</string>
    <string name="show_leading_icon">Show/Hide leading icon</string>
    <string name="show_hide_trailing_icon">Show/Hide trailing icon</string>
    <string name="character_count">Character Count</string>
    <string name="textinput_filled">Filled</string>
    <string name="textinput_outlined">Outlined</string>
    <string name="show_hide_stroke">Show/Hide stroke</string>
    <string name="alert_dialog">Alert Dialog</string>
    <string name="simple_dialog">Simple Dialog</string>
    <string name="confirmation_dialog">Confirmation Dialog</string>
    <string name="dialogs">Dialogs</string>
    <string name="show_simple_dialog">Show simple dialog</string>
    <string name="show_alert_dialog">Show alert dialog</string>
    <string name="show_confirmation_dialog">Show confirmation dialog</string>
    <string name="pickers">Pickers</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="show_date_picker">Show Date Picker</string>
    <string name="show_time_picker">Show Time Picker</string>
    <string-array name="dialog_list_items">
        <item>Item 1</item>
        <item>Item 2</item>
        <item>Item 3</item>
        <item>Item 4</item>
        <item>Item 5</item>
        <item>Item 6</item>
    </string-array>
    <string name="add_id">ca-app-pub-4967344367488467/7433989858</string>
    <string name="details_add_id">ca-app-pub-4967344367488467/3875347788</string>
</resources>
