<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bottom_nav_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home" />
    <item
        android:id="@+id/bottom_nav_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/notifications" />
    <item
        android:id="@+id/bottom_nav_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search" />
    <item
        android:id="@+id/bottom_nav_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/settings" />
    <item
        android:id="@+id/bottom_nav_more"
        android:icon="@drawable/ic_more_horiz_black_24dp"
        android:title="@string/more" />
</menu>