<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/toolbar"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_chevron_left_black_24dp"
            app:title="@string/Chips" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/chips_tab"
            android:layout_width="0dp"
            android:layout_height="@dimen/xxlarge_48"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:tabGravity="center"
            app:tabMode="auto"
            app:tabTextAppearance="@style/Body1"
            app:tabUnboundedRipple="true">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_entry_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/entry_chip" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_filter_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_chip" />
        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/chips_view_pager"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chips_tab" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>