<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_line"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="@dimen/custom_96" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_filled"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/large_32"
                android:layout_marginTop="@dimen/xxlarge_48"
                android:layout_marginEnd="@dimen/large_32"
                android:visibility="gone"
                app:boxBackgroundColor="#003c8f"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_outlined"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/large_32"
                android:layout_marginTop="@dimen/xxlarge_48"
                android:layout_marginEnd="@dimen/large_32"
                app:boxBackgroundColor="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/show_hide_leading_icon"
                style="@style/Heading6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium_16"
                android:layout_marginTop="@dimen/large_32"
                android:text="@string/show_leading_icon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/guide_line" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch_leading_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium_16"
                android:layout_marginTop="@dimen/small_8"
                android:checked="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/show_hide_leading_icon"
                app:thumbTint="@color/switch_thumb" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/show_hide_trailing_icon"
                style="@style/Heading6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium_16"
                android:layout_marginTop="@dimen/large_32"
                android:text="@string/show_hide_trailing_icon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/switch_leading_icon" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch_trailing_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium_16"
                android:layout_marginTop="@dimen/small_8"
                android:checked="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/show_hide_trailing_icon"
                app:thumbTint="@color/switch_thumb" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/show_hide_character_count"
                style="@style/Heading6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium_16"
                android:layout_marginTop="@dimen/large_32"
                android:text="@string/character_count"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/switch_trailing_icon" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch_character_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium_16"
                android:layout_marginTop="@dimen/small_8"
                android:checked="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/show_hide_character_count"
                app:thumbTint="@color/switch_thumb" />


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/corner_radius_title"
                style="@style/Heading6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium_16"
                android:layout_marginTop="@dimen/large_32"
                android:text="@string/corner_radius"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/switch_character_count" />

            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/corner_radius_seek_bar"
                style="@style/Widget.AppCompat.SeekBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium_16"
                android:layout_marginTop="@dimen/medium_16"
                android:layout_marginEnd="@dimen/custom_56"
                android:max="32"
                android:progressTint="@color/secondaryDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/corner_radius_title" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/corner_radius_seek_bar_value"
                style="@style/Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@id/corner_radius_seek_bar"
                app:layout_constraintEnd_toEndOf="@id/corner_radius_seek_bar"
                tools:text="12" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>